--- a/ny.html
+++ b/ny.html
@@ -171,7 +171,7 @@
 
         <div class="message">
             <h2>Chúc em 20/10 :</h2>
-            <p>Tới ngày 20-10 rồi anh không biết nói những lời ngọt ngào có cánh, những lời lãng mạn nhưng anh biết anh yêu em rất rất nhiều và em cũng vậy. Anh chúc em luôn có sức khỏe, ngày càng xinh đẹp hơn và tiến bộ nhiều hơn trong học tập. Anh hứa với em, anh sẽ mãi luôn ở bên để bảo vệ, chăm lo và yêu thương em. Dù trước đó anh đã làm nhiều điều làm em nghĩ và buồn, nhưng mà như lời anh đã hứa với em, anh sẽ thực hiện được. Anh yêu em 🥰🥰😘.</p>
+            <p>Tới ngày 20-10 rồi anh không biết nói những lời ngọt ngào có cánh, những lời lãng mạn nhưng anh biết anh yêu em rất rất nhiều và em cũng vậy. Anh chúc em luôn có sức khỏe, ngày càng xinh đẹp hơn . Anh hứa với em, anh sẽ mãi luôn ở bên để bảo vệ, chăm lo và yêu thương em. Dù trước đó anh đã làm nhiều điều làm em nghĩ và buồn, nhưng mà như lời anh đã hứa với em, anh sẽ thực hiện được. Anh yêu em 🥰🥰😘.</p>
            
         </div>
     </div>
